# RedPitaya

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CHANGELOG_Z20.md  CHANGELOG_Z20_250_12.md  CHANGELOG_Z20_4CH.md  CHANGES  COPYING  Examples_C_README.md  HAMLAB.md  INSTALL  INSTALL.md  MakeRTD  Makefile  Makefile.arm  Makefile.x86  NETWORK.md  NETWORKING.md  README  README.md  README.rst  TFT.md  TODO  TODO.md  conf.py  download_fpga.sh  gen_fpga_report.sh  index.rst  meson.build  readme.txt  remove-proprietary.sh  settings.sh  settings64.sh
Test/bode/: CMakeLists.txt  Makefile  README.md  ba_api.cpp  ba_api.h  bode  bode.c  bode.cpp  filtered_data.m
Test/bode/src/: ba_api.cpp  ba_api.h  bode.cpp
Test/monitor/: CMakeLists.txt  Makefile  monitor.c  xadc.c
Test/monitor/src/: monitor.cpp  xadc.cpp
api1/: Doxyfile  Makefile  README.md  install_vfat.sh  mercury.sh  meson.build
api1/include/redpitaya/: acq.h  asg_bst.h  asg_per.h  clb.h  fixp.h  gen.h  gen_out.h  hwid.h  la.h  la_msk.h  la_rle.h  la_trg.h  lg.h  lg_out.h  lin.h  osc.h  osc_fil.h  osc_trg.h  rp1.h  util.h  wave.h
api1/src/: Makefile  acq.c  acq.h  asg_bst.c  asg_bst.h  asg_per.c  asg_per.h  calib.c  calib.h  clb.c  common.c  common.h  evn.c  evn.h  fixp.c  gen.c  gen.h  gen_out.c  gen_out.h  housekeeping.h  hwid.c  hwid.h  la.c  la_msk.c  la_rle.c  la_trg.c  lg.c  lg_out.c  lin.c  main.c  osc.c  osc.h  osc_fil.c  osc_trg.c  rp.c  uio.c  uio.h  util.c  util.h  wave.c
apps-tools/calib_app/: 2ch_adc.html  4ch_adc.html  CMakeLists.txt  Makefile  index.html  index_4ch.html  nginx.conf
apps-tools/calib_app/css/: adc_m.css  style.css  subwindow.css  table.css  tooltip.css
apps-tools/calib_app/info/: info.json
apps-tools/calib_app/js/: client.js  guiHandler.js  manager.js  manager_adc_mode.js  manager_auto_mode.js  manager_fauto_mode.js  manager_filter_mode.js  sm.js  sub_window_eeprom.js
apps-tools/calib_app/src/: Makefile  acq.cpp  acq.h  acq_math.cpp  acq_math.h  calib.cpp  calib.h  calib_man.cpp  calib_man.h  common.cpp  common.h  eeprom_window.cpp  eeprom_window.h  filter_logic.cpp  filter_logic.h  filter_logic2ch.cpp  filter_logic2ch.h  filter_logicNch.cpp  filter_logicNch.h  main.cpp  main.h  test.cpp
apps-tools/ecosystem/: CMakeLists.txt  Makefile  error_bazaar_install.html  ie9.css  index.html  instruct.html  style.css
apps-tools/ecosystem/info/: info.json
apps-tools/jupyter_manager/: CMakeLists.txt  Makefile  nginx.conf
apps-tools/jupyter_manager/info/: info.json
apps-tools/streaming_manager/src/: CMakeLists.txt  Makefile  build.sh  main.cpp  main.h  service.cpp
rp-api/api/: CMakeLists.txt  Doxyfile  clean.sh
rp-api/api-250-12/: CMakeLists.txt  Makefile  clean.sh
rp-api/api-250-12/configs/: AD9746BCPZ-250.xml  ADC3663-65.xml  ADC3664-125.xml  MAX7311.xml  SI571.xml
rp-api/api-250-12/include/: rp-gpio-power.h  rp-i2c-max7311-c.h  rp-i2c-max7311.h  rp-i2c-mcp47x6-c.h  rp-i2c-mcp47x6.h  rp-i2c.h  rp-spi.h
rp-api/api-250-12/src/: rp-gpio-power.cpp  rp-i2c-max7311-c.cpp  rp-i2c-max7311.cpp  rp-i2c-mcp47x6-c.cpp  rp-i2c-mcp47x6.cpp  rp-i2c.cpp  rp-spi.cpp  rp_api_250.i
rp-api/api-250-12/test/: main.cpp  rp_api_250_test.py
rp-api/api-app/: CMakeLists.txt
rp-api/api-app/src/: bodeApp.cpp  bodeApp.h  common.cpp  common.h  exportmap  neon_asm.h  osciloscopeApp.cpp  osciloscopeApp.h  rpApp.cpp  rpApp.h  spectrometerApp.cpp  spectrometerApp.h  version.h
rp-api/api-calib/: CMakeLists.txt
rp-api/api-calib/include/: acq.h  calib.h  calib_man.h  filter_logic.h  filter_logicNch.h
rp-api/api-calib/src/: acq.cpp  acq_math.cpp  acq_math.h  calib.cpp  calib_man.cpp  common.cpp  common.h  exportmap  filter_logic.cpp  filter_logicNch.cpp
rp-api/api-dsp/: CMakeLists.txt
rp-api/api-dsp/src/: rp_algorithms.cpp  rp_algorithms.h  rp_dsp.cpp  rp_dsp.h  rp_dsp.i  rp_interpolation.h  rp_math.cpp  rp_math.h
rp-api/api-dsp/tests/: rp_dsp_test.py
rp-api/api-formatter/: CMakeLists.txt
rp-api/api-formatter/src/: rp_formatter.cpp  rp_formatter.h  rp_formatter.i
rp-api/api-formatter/tests/: rp_formatter_test.py
rp-api/api-hw/: CMakeLists.txt  clean.sh
rp-api/api-hw-profiles/: CMakeLists.txt
rp-api/api-hw-profiles/include/: rp_hw-profiles.h
rp-api/api-hw-profiles/src/: common.c  common.cpp  common.h  rp_hw_profiles.c  rp_hw_profiles.cpp  rp_hw_profiles.i  stem_122_16SDR_v1.0.c  stem_122_16SDR_v1.0.cpp  stem_122_16SDR_v1.0.h  stem_122_16SDR_v1.1.c  stem_122_16SDR_v1.1.cpp  stem_122_16SDR_v1.1.h  stem_125_10_v1.0.c  stem_125_10_v1.0.cpp  stem_125_10_v1.0.h  stem_125_14_BO_v2.0.cpp  stem_125_14_BO_v2.0.h  stem_125_14_LN_BO_v1.1.c  stem_125_14_LN_BO_v1.1.cpp  stem_125_14_LN_BO_v1.1.h  stem_125_14_LN_CE1_v1.1.c  stem_125_14_LN_CE1_v1.1.cpp  stem_125_14_LN_CE1_v1.1.h  stem_125_14_LN_CE2_v1.1.c  stem_125_14_LN_CE2_v1.1.cpp  stem_125_14_LN_CE2_v1.1.h  stem_125_14_LN_v1.1.c  stem_125_14_LN_v1.1.cpp  stem_125_14_LN_v1.1.h  stem_125_14_Pro_BO_v2.0.cpp  stem_125_14_Pro_BO_v2.0.h  stem_125_14_Pro_v2.0.c  stem_125_14_Pro_v2.0.cpp  stem_125_14_Pro_v2.0.h  stem_125_14_Z7020_4IN_BO_v1.3.c  stem_125_14_Z7020_4IN_BO_v1.3.cpp  stem_125_14_Z7020_4IN_BO_v1.3.h  stem_125_14_Z7020_4IN_v1.0.c  stem_125_14_Z7020_4IN_v1.0.cpp  stem_125_14_Z7020_4IN_v1.0.h  (+69 more)
rp-api/api-hw-profiles/tests/: rp_hw_profiles_test.py
rp-api/api-hw/include/: rp_hw.h
rp-api/api-hw/src/: i2c-helper.c  i2c-helper.h  i2c.c  i2c.h  led_system.c  led_system.h  rp_hw.c  rp_hw.i  rp_log.h  sensors.c  sensors.h  spi-helper.c  spi-helper.h  (+4 more)
rp-api/api2/: CMakeDoxy.txt  CMakeLists.txt  Makefile
rp-web-api/rp-client/: CMakeLists.txt
rp-web-api/rp-system/: CMakeLists.txt
rp-web-api/rp-websocket/: CMakeLists.txt
scpi/: Makefile  README.md  acquire.c  acquire.h  api_cmd.c  common.h  meson.build  scpi-commands.c  scpi-commands.h  scpi-server.c  scpi_gen.c  scpi_gen.h  scpi_la.c  scpi_la.h  test.py
scpi/doc/: SCPIAPI_commands.odt
scpi/src/: Makefile  api_cmd.h  apin.c  common.c  common.h  generate.c  generate.h  scpi-commands.c  scpi-commands.h  scpi-server.c  scpi_gen.c  scpi_gen.h
tools/e3_led_controller/: CMakeLists.txt
(+5451 files in other folders)
